--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0"
   },
-  "homepage": "https://yourusername.github.io/repositoryname"
+  "homepage": "https://swayamjain.github.io/gamifiedportfolio"
 }
